<resources>
    <string name="app_name">Custom Weather App</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_user">Hola Jairo, bienvenido de vuelta!</string>

    <string name="btn_vermas">Ver más</string>
    <string name="title_proximosdias">Próximos días</string>
    <string name="title_duringday">Durante el día</string>

    <!--Para informacion en view: weather per day-->
    <string name="txt_levelsea">Nivel\ndel mar</string>
    <string name="txt_groundprs">Presión\ndel suelo</string>
    <string name="txt_atmosfericprs">Presión\natmosferica</string>
    <string name="txt_humidity">Humedad</string>
    <string name="txt_visibility">Visibilidad</string>
    <string name="txt_probop">Probabilidad\nde precipitación</string>
    <string name="title_planning">Planifica</string>
    <string name="subtitle_planning">Tu verano, tus salidas, tus paseos, etc.</string>
    <string name="txt_title_plan">Título</string>
    <string name="txt_description_plan">Descripción (Opcional)</string>
    <string name="txt_notification_plan">Crear recordatorio</string>
    <string name="txt_select_date">Escoger fecha</string>
    <string name="txt_btn_save_plan">Guardar plan</string>
    <string name="no_plans_text">Aun no agregas un plan\npara tus actividades\nfavoritas</string>
</resources>